--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,16 @@ jobs:
       - name: Format source code
         run: black  --line-length=88 .
 
+      # Documentation on "enable" codes:
+      #   http://pylint.pycqa.org/en/latest/technical_reference/features.html#basic-checker-messages
+      # C0114: missing-module-docstring
+      # C0115: missing-class-docstring
+      # C0116: missing-function-docstring
       - name: Validate docstrings
-        run: pylint ./$PROJECT_NAME --ignore=tests,examples --disable=all --enable=C0114,C0115,C0116
+        run: pylint ./$PROJECT_NAME --ignore=tests,examples,scrap --disable=all --enable=C0114
 
       - name: Test
-        run: pytest --doctest-modules -v $PROJECT_NAME
+        run: pytest --doctest-modules --ignore=scrap -v $PROJECT_NAME
   publish:
     name: Publish
     if: "!contains(github.event.head_commit.message, '[skip ci]') && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')"
