--- a/setup.cfg
+++ b/setup.cfg
@@ -17,5 +17,6 @@ display_name = config2py
 packages = find:
 include_package_data = True
 zip_safe = False
-install_requires = 
+install_requires =
+    dol
 
