chore: trying to put the importlib_resourcesconditional in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,11 @@ include_package_data = True
 zip_safe = False
 install_requires =
     dol
+    mypackage[importlib_resources]
+
+[options.extras_require]
+importlib_resources =
+    importlib_resources>=3.0.0; python_version < '3.9'
+    ; Exclude the importlib_resources requirement if Python 3.9+
+    :python_version >= '3.9'
 
