chore: put the importlib_resourcesconditional in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,6 @@ install_requires =
 
 [options.extras_require]
 importlib_resources =
-    importlib_resources>=3.0.0; python_version < '3.9'
-    ; Exclude the importlib_resources requirement if Python 3.9+
-    :python_version >= '3.9'
+    ; Use importlib.resources as an alias for importlib_resources if Python 3.9+
+    importlib_resources; python_version < '3.9'
 
