--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: Continuous Integration
 on: [push, pull_request]
 env:
   PROJECT_NAME: config2py
+
 jobs:
   validation:
     name: Validation
@@ -9,38 +10,43 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10']
+        python-version: ["3.10", "3.12"]
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Necessary for 3.12, since setuptools was removed there
+      # TODO: Get rid of this once we have a better solution for Python 3.12
+      - name: Install setuptools
+        run: python -m pip install setuptools
+
       - name: Install Dependencies
         uses: i2mint/isee/actions/install-packages@master
         with:
           dependency-files: setup.cfg
+          # ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Uncomment this if you need to install private dependencies from source
 
       - name: Format Source Code
         uses: i2mint/isee/actions/format-source-code@master
 
-      # Documentation on "enable" codes:
-      #     http://pylint.pycqa.org/en/latest/technical_reference/features.html#basic-checker-messages
       - name: Pylint Validation
         uses: i2mint/isee/actions/pylint-validation@master
         with:
           root-dir: ${{ env.PROJECT_NAME }}
           enable: missing-module-docstring
-          ignore: tests,scrap
+          ignore: tests,examples,scrap
+          # ignore-patterns: '.*tests.*|.*examples.*|.*scrap.*'
 
       - name: Pytest Validation
         uses: i2mint/isee/actions/pytest-validation@master
         with:
           root-dir: ${{ env.PROJECT_NAME }}
-          paths-to-ignore: scrap
+          paths-to-ignore: examples,scrap
 
   publish:
     name: Publish
@@ -49,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10']
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -60,6 +66,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Necessary for 3.12, since setuptools was removed there
+      # TODO: Get rid of this once we have a better solution for Python 3.12
+      - name: Install setuptools
+        run: python -m pip install setuptools
+        
       - name: Format Source Code
         uses: i2mint/isee/actions/format-source-code@master
 
@@ -68,6 +79,9 @@ jobs:
 
       - name: Package
         uses: i2mint/isee/actions/package@master
+        # Uncomment this if you need to install private dependencies from source
+        # with:  
+          # ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  
 
       - name: Publish
         uses: i2mint/isee/actions/publish@master
@@ -81,17 +95,26 @@ jobs:
           commit-message: "**CI** Formatted code + Updated version number and documentation. [skip ci]"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Tag Repository
+      - name: Tag Repository With New Version Number
         uses: i2mint/isee/actions/tag-repository@master
         with:
           tag: $VERSION
 
   github-pages:
     name: Publish GitHub Pages
+
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+      
     if: "!contains(github.event.head_commit.message, '[skip ci]') && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)"
     needs: publish
     runs-on: ubuntu-latest
     steps:
       - uses: i2mint/epythet/actions/publish-github-pages@master
         with:
+          # IMPORTANT Note: You don't need to specify GITHUB_TOKEN in your repo secrets.
+          # GITHUB_TOKEN is special & automatically provided to your workflow run.
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          ignore: "tests/,scrap/"
