--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,5 @@
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -12,11 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 keywords = []
 authors = []
-dependencies = [
-    "dol",
-    "i2",
-    "importlib_resources; python_version < '3.9'",
-]
+dependencies = ["dol", "i2", "importlib_resources; python_version < '3.9'"]
 
 [project.license]
 text = "Apache-2.0"
@@ -25,32 +19,14 @@ text = "Apache-2.0"
 Homepage = "https://github.com/i2mint/config2py"
 
 [project.optional-dependencies]
-dev = [
-    "pytest>=7.0",
-    "pytest-cov>=4.0",
-    "ruff>=0.1.0",
-]
-docs = [
-    "sphinx>=6.0",
-    "sphinx-rtd-theme>=1.0",
-]
+dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]
+docs = ["sphinx>=6.0", "sphinx-rtd-theme>=1.0"]
 # Codec extras - optional dependencies for various config formats
-yaml = [
-    "pyyaml>=6.0",
-]
-toml = [
-    "tomli>=2.0.0; python_version < '3.11'",
-    "tomli-w>=1.0.0",
-]
-env = [
-    "python-dotenv>=1.0.0",
-]
-json5 = [
-    "json5>=0.9.0",
-]
-properties = [
-    "jproperties>=2.1.0",
-]
+yaml = ["pyyaml>=6.0"]
+toml = ["tomli>=2.0.0; python_version < '3.11'", "tomli-w>=1.0.0"]
+env = ["python-dotenv>=1.0.0"]
+json5 = ["json5>=0.9.0"]
+properties = ["jproperties>=2.1.0"]
 # Convenience groups
 all-codecs = [
     "pyyaml>=6.0",
@@ -84,35 +60,18 @@ exclude = [
 ]
 
 [tool.ruff.lint]
-select = [
-    "D100",
-]
-ignore = [
-    "D203",
-    "E501",
-    "B905",
-]
+select = ["D100"]
+ignore = ["D203", "E501", "B905"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = [
-    "D",
-]
-"examples/*" = [
-    "D",
-]
-"scrap/*" = [
-    "D",
-]
+"**/tests/*" = ["D"]
+"**/examples/*" = ["D"]
+"**/scrap/*" = ["D"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-testpaths = [
-    "tests",
-]
-doctest_optionflags = [
-    "NORMALIZE_WHITESPACE",
-    "ELLIPSIS",
-]
+testpaths = ["tests"]
+doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
